--- a/src/main/resources/view/dashBoard_form.fxml
+++ b/src/main/resources/view/dashBoard_form.fxml
@@ -14,9 +14,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="anchorpaneDash" prefHeight="838.0" prefWidth="1607.0" styleClass="dashboard-pane" stylesheets="@../css/Main.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.DashBoardFormController">
+<AnchorPane fx:id="anchorpaneDash" prefHeight="703.0" prefWidth="1328.0" styleClass="dashboard-pane" stylesheets="@../css/Main.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.DashBoardFormController">
    <children>
-      <HBox layoutX="9.0" layoutY="364.0" prefHeight="421.0" prefWidth="1607.0">
+      <HBox layoutX="12.0" layoutY="322.0" prefHeight="362.0" prefWidth="1294.0">
          <children>
             <VBox prefHeight="382.0" prefWidth="517.0">
                <children>
@@ -44,24 +44,24 @@
                   </LineChart>
                </children>
             </VBox>
-            <VBox prefHeight="382.0" prefWidth="549.0">
+            <VBox prefHeight="309.0" prefWidth="550.0">
                <children>
                   <Label text="Amount of ingredients on hand">
                      <font>
                         <Font name="System Bold Italic" size="18.0" />
                      </font>
                   </Label>
-                  <PieChart fx:id="pieChart" prefHeight="382.0" prefWidth="793.0" />
+                  <PieChart fx:id="pieChart" prefHeight="318.0" prefWidth="512.0" />
                </children>
             </VBox>
-            <VBox prefHeight="382.0" prefWidth="542.0">
+            <VBox prefHeight="358.0" prefWidth="491.0">
                <children>
                   <Label text="Amount of orders received per day">
                      <font>
                         <Font name="System Bold Italic" size="18.0" />
                      </font>
                   </Label>
-                  <BarChart fx:id="barchart" legendVisible="false">
+                  <BarChart fx:id="barchart" legendVisible="false" prefHeight="362.0" prefWidth="413.0">
                     <xAxis>
                       <CategoryAxis side="BOTTOM" />
                     </xAxis>
@@ -73,28 +73,28 @@
             </VBox>
          </children>
       </HBox>
-      <AnchorPane layoutX="128.0" layoutY="79.0" prefHeight="240.0" prefWidth="322.0" style="-fx-background-color: bb5ae2; -fx-background-radius: 13;">
+      <AnchorPane layoutX="51.0" layoutY="79.0" prefHeight="172.0" prefWidth="236.0" style="-fx-background-color: bb5ae2; -fx-background-radius: 13;">
          <children>
             <Label layoutX="10.0" layoutY="18.0" text="Customer Count">
                <font>
-                  <Font name="DejaVu Sans Bold" size="22.0" />
+                  <Font name="System Bold" size="22.0" />
                </font>
             </Label>
-            <Label fx:id="lblCusCount" layoutX="243.0" layoutY="78.0" prefHeight="85.0" prefWidth="68.0" text="20" textFill="#7c2226">
+            <Label fx:id="lblCusCount" layoutX="162.0" layoutY="67.0" prefHeight="85.0" prefWidth="68.0" text="20" textFill="#7c2226">
                <font>
                   <Font name="System Bold" size="46.0" />
                </font>
             </Label>
-            <ImageView fitHeight="152.0" fitWidth="212.0" layoutX="13.0" layoutY="67.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="86.0" fitWidth="178.0" layoutX="13.0" layoutY="67.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../images/img.png" />
                </image>
             </ImageView>
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="1152.0" layoutY="79.0" prefHeight="240.0" prefWidth="322.0" style="-fx-background-color: #00e5ff; -fx-background-radius: 10;">
+      <AnchorPane layoutX="1026.0" layoutY="82.0" prefHeight="166.0" prefWidth="258.0" style="-fx-background-color: #00e5ff; -fx-background-radius: 10;">
          <children>
-            <ImageView fitHeight="152.0" fitWidth="212.0" layoutX="14.0" layoutY="66.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="86.0" fitWidth="154.0" layoutX="14.0" layoutY="66.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../images/cl3oal8w6000c79570tgf4k1k.jpg" />
                </image>
@@ -104,35 +104,35 @@
                   <Font name="System Bold" size="20.0" />
                </font>
             </Label>
-            <Label fx:id="lblOrderCount" layoutX="243.0" layoutY="92.0" text="20" textFill="#7c2226">
+            <Label fx:id="lblOrderCount" layoutX="178.0" layoutY="75.0" text="20" textFill="#7c2226">
                <font>
                   <Font name="System Bold" size="46.0" />
                </font>
             </Label>
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="471.0" layoutY="79.0" prefHeight="240.0" prefWidth="322.0" style="-fx-background-color: #ffb74d; -fx-background-radius: 10;">
+      <AnchorPane layoutX="360.0" layoutY="79.0" prefHeight="172.0" prefWidth="258.0" style="-fx-background-color: #ffb74d; -fx-background-radius: 10;">
          <children>
             <Label layoutX="9.0" layoutY="15.0" text="Employee Count">
                <font>
                   <Font name="System Bold" size="20.0" />
                </font>
             </Label>
-            <Label fx:id="lblEmpCount" layoutX="243.0" layoutY="92.0" text="20" textFill="#7c2226">
+            <Label fx:id="lblEmpCount" layoutX="173.0" layoutY="80.0" text="20" textFill="#7c2226">
                <font>
                   <Font name="System Bold" size="46.0" />
                </font>
             </Label>
-            <ImageView fitHeight="152.0" fitWidth="212.0" layoutX="14.0" layoutY="71.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="86.0" fitWidth="193.0" layoutX="14.0" layoutY="71.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../images/employee-engagement-statistics.jpg" />
                </image>
             </ImageView>
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="812.0" layoutY="79.0" prefHeight="240.0" prefWidth="322.0" style="-fx-background-color: #5ae287; -fx-background-radius: 10;">
+      <AnchorPane layoutX="693.0" layoutY="79.0" prefHeight="172.0" prefWidth="258.0" style="-fx-background-color: #5ae287; -fx-background-radius: 10;">
          <children>
-            <ImageView fitHeight="152.0" fitWidth="212.0" layoutX="14.0" layoutY="67.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="86.0" fitWidth="154.0" layoutX="14.0" layoutY="67.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../images/Supplier.png" />
                </image>
@@ -142,31 +142,26 @@
                   <Font name="System Bold" size="20.0" />
                </font>
             </Label>
-            <Label fx:id="lblSupCount" layoutX="253.0" layoutY="92.0" text="20" textFill="#7c2226">
+            <Label fx:id="lblSupCount" layoutX="184.0" layoutY="76.0" text="20" textFill="#7c2226">
                <font>
                   <Font name="System Bold" size="46.0" />
                </font>
             </Label>
          </children>
       </AnchorPane>
-      <Label layoutX="24.0" layoutY="25.0" text="DASH BOARD">
+      <Label layoutX="64.0" layoutY="25.0" text="DASH BOARD">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <Label layoutX="1315.0" layoutY="10.0" text="HI..! WELCOME ">
+      <Label layoutX="1063.0" layoutY="10.0" text="HI..! WELCOME ">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <Label layoutX="1281.0" layoutY="50.0" text="THIS IS LNV MANAGEMENT SYSTEM">
+      <Label layoutX="1029.0" layoutY="50.0" text="THIS IS LNV MANAGEMENT SYSTEM">
          <font>
             <Font size="16.0" />
-         </font>
-      </Label>
-      <Label layoutX="24.0" layoutY="25.0" text="DASH BOARD">
-         <font>
-            <Font name="System Bold" size="24.0" />
          </font>
       </Label>
    </children>
