--- a/src/main/resources/view/employee_form.fxml
+++ b/src/main/resources/view/employee_form.fxml
@@ -12,56 +12,56 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="838.0" prefWidth="1607.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.EmployeeFormController">
+<AnchorPane prefHeight="703.0" prefWidth="1328.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.EmployeeFormController">
    <children>
       <Label layoutX="28.0" layoutY="32.0" text="Employee">
          <font>
             <Font name="System Bold" size="30.0" />
          </font>
       </Label>
-      <Text layoutX="104.0" layoutY="144.0" strokeType="OUTSIDE" strokeWidth="0.0" text="EMP ID" wrappingWidth="55.7294921875">
+      <Text layoutX="104.0" layoutY="129.0" strokeType="OUTSIDE" strokeWidth="0.0" text="EMP ID" wrappingWidth="55.7294921875">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Text>
-      <TextField fx:id="txtEmpId" layoutX="104.0" layoutY="154.0" onAction="#txtSearchOnAction" onKeyReleased="#txtEmpIdOnKeyReleased" prefHeight="28.0" prefWidth="211.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: black;" />
-      <Text layoutX="415.0" layoutY="144.0" strokeType="OUTSIDE" strokeWidth="0.0" text="First Name" wrappingWidth="88.7294921875">
+      <TextField fx:id="txtEmpId" layoutX="104.0" layoutY="139.0" onAction="#txtSearchOnAction" onKeyReleased="#txtEmpIdOnKeyReleased" prefHeight="28.0" prefWidth="211.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: black;" />
+      <Text layoutX="106.0" layoutY="202.0" strokeType="OUTSIDE" strokeWidth="0.0" text="First Name" wrappingWidth="88.7294921875">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Text>
-      <TextField fx:id="txtFirstName" layoutX="415.0" layoutY="154.0" onKeyReleased="#txtFirstNameOnKeyReleased" prefHeight="28.0" prefWidth="211.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: black;" />
-      <Text layoutX="106.0" layoutY="229.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Last Name" wrappingWidth="88.7294921875">
+      <TextField fx:id="txtFirstName" layoutX="106.0" layoutY="212.0" onKeyReleased="#txtFirstNameOnKeyReleased" prefHeight="28.0" prefWidth="211.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: black;" />
+      <Text layoutX="106.0" layoutY="276.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Last Name" wrappingWidth="88.7294921875">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Text>
-      <TextField fx:id="txtLastName" layoutX="104.0" layoutY="241.0" onKeyReleased="#txtLastNameOnKeyReleased" prefHeight="28.0" prefWidth="211.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: black;" />
-      <Text layoutX="415.0" layoutY="230.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Address" wrappingWidth="88.7294921875">
+      <TextField fx:id="txtLastName" layoutX="104.0" layoutY="288.0" onKeyReleased="#txtLastNameOnKeyReleased" prefHeight="28.0" prefWidth="211.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: black;" />
+      <Text layoutX="106.0" layoutY="349.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Address" wrappingWidth="88.7294921875">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Text>
-      <TextField fx:id="txtAddress" layoutX="415.0" layoutY="241.0" onKeyReleased="#txtAddressOnKeyReleased" prefHeight="28.0" prefWidth="211.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: black;" />
-      <Text layoutX="106.0" layoutY="312.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tel" wrappingWidth="88.7294921875">
+      <TextField fx:id="txtAddress" layoutX="106.0" layoutY="360.0" onKeyReleased="#txtAddressOnKeyReleased" prefHeight="28.0" prefWidth="211.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: black;" />
+      <Text layoutX="109.0" layoutY="426.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tel" wrappingWidth="88.7294921875">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Text>
-      <TextField fx:id="txtTel" layoutX="104.0" layoutY="323.0" onKeyReleased="#txtTelOnKeyReleased" prefHeight="28.0" prefWidth="211.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: black;" />
-      <Text layoutX="419.0" layoutY="312.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Salary" wrappingWidth="88.7294921875">
+      <TextField fx:id="txtTel" layoutX="107.0" layoutY="437.0" onKeyReleased="#txtTelOnKeyReleased" prefHeight="28.0" prefWidth="211.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: black;" />
+      <Text layoutX="110.0" layoutY="502.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Salary" wrappingWidth="88.7294921875">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Text>
-      <TextField fx:id="txtSalary" layoutX="414.0" layoutY="323.0" onKeyReleased="#txtSalaryOnKeyReleased" prefHeight="28.0" prefWidth="211.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: black;" />
-      <Text layoutX="105.0" layoutY="392.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Position" wrappingWidth="88.7294921875">
+      <TextField fx:id="txtSalary" layoutX="105.0" layoutY="513.0" onKeyReleased="#txtSalaryOnKeyReleased" prefHeight="28.0" prefWidth="211.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: black;" />
+      <Text layoutX="105.0" layoutY="581.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Position" wrappingWidth="88.7294921875">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Text>
-      <TextField fx:id="txtPosition" layoutX="105.0" layoutY="403.0" prefHeight="28.0" prefWidth="211.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: black;" />
-      <JFXButton buttonType="RAISED" layoutX="537.0" layoutY="751.0" onAction="#btnSaveOnAction" prefHeight="33.0" prefWidth="97.0" styleClass="jfx-buttonSave" stylesheets="@../css/button.css" text="Save">
+      <TextField fx:id="txtPosition" layoutX="105.0" layoutY="592.0" prefHeight="28.0" prefWidth="211.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: black;" />
+      <JFXButton buttonType="RAISED" layoutX="537.0" layoutY="651.0" onAction="#btnSaveOnAction" prefHeight="33.0" prefWidth="97.0" styleClass="jfx-buttonSave" stylesheets="@../css/button.css" text="Save">
          <graphic>
             <ImageView fitHeight="18.0" fitWidth="42.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -73,7 +73,7 @@
             <Font name="System Bold" size="13.0" />
          </font>
       </JFXButton>
-      <JFXButton buttonType="RAISED" layoutX="428.0" layoutY="751.0" onAction="#btnDeleteOnAction" prefHeight="33.0" prefWidth="97.0" styleClass="jfx-buttonDelete" stylesheets="@../css/button.css" text="Delete">
+      <JFXButton buttonType="RAISED" layoutX="428.0" layoutY="651.0" onAction="#btnDeleteOnAction" prefHeight="33.0" prefWidth="97.0" styleClass="jfx-buttonDelete" stylesheets="@../css/button.css" text="Delete">
          <graphic>
             <ImageView fitHeight="18.0" fitWidth="42.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -85,7 +85,7 @@
             <Font name="System Bold" size="13.0" />
          </font>
       </JFXButton>
-      <JFXButton buttonType="RAISED" layoutX="319.0" layoutY="751.0" onAction="#btnUpdateOnAction" prefHeight="33.0" prefWidth="97.0" styleClass="jfx-buttonUpdate" stylesheets="@../css/button.css" text="Update">
+      <JFXButton buttonType="RAISED" layoutX="319.0" layoutY="651.0" onAction="#btnUpdateOnAction" prefHeight="33.0" prefWidth="97.0" styleClass="jfx-buttonUpdate" stylesheets="@../css/button.css" text="Update">
          <graphic>
             <ImageView fitHeight="18.0" fitWidth="42.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -97,7 +97,7 @@
             <Font name="System Bold" size="13.0" />
          </font>
       </JFXButton>
-      <JFXButton buttonType="RAISED" layoutX="209.0" layoutY="751.0" onAction="#btnClearOnAction" prefHeight="33.0" prefWidth="97.0" styleClass="jfx-buttonClear" stylesheets="@../css/button.css" text="Clear">
+      <JFXButton buttonType="RAISED" layoutX="209.0" layoutY="651.0" onAction="#btnClearOnAction" prefHeight="33.0" prefWidth="97.0" styleClass="jfx-buttonClear" stylesheets="@../css/button.css" text="Clear">
          <graphic>
             <ImageView fitHeight="18.0" fitWidth="42.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -109,14 +109,14 @@
             <Font name="System Bold" size="13.0" />
          </font>
       </JFXButton>
-      <TableView fx:id="tblEmployee" layoutX="669.0" layoutY="67.0" onMouseClicked="#tblEmpOnMouse" prefHeight="718.0" prefWidth="909.0" stylesheets="@../css/BatchIngre.css">
+      <TableView fx:id="tblEmployee" layoutX="425.0" layoutY="68.0" onMouseClicked="#tblEmpOnMouse" prefHeight="546.0" prefWidth="820.0" stylesheets="@../css/BatchIngre.css">
         <columns>
           <TableColumn fx:id="colEmpId" prefWidth="86.0" text="EMP ID" />
-          <TableColumn fx:id="colFirstName" prefWidth="151.0" text="First Name" />
-            <TableColumn fx:id="colAddress" prefWidth="146.0" text="Address" />
-            <TableColumn fx:id="colTel" prefWidth="171.0" text="Tel" />
-            <TableColumn fx:id="colSalary" prefWidth="174.0" text="Salary" />
-            <TableColumn fx:id="colPosition" prefWidth="180.0" text="Position" />
+          <TableColumn fx:id="colFirstName" prefWidth="127.20001220703125" text="First Name" />
+            <TableColumn fx:id="colAddress" prefWidth="132.79998779296875" text="Address" />
+            <TableColumn fx:id="colTel" prefWidth="155.20001220703125" text="Tel" />
+            <TableColumn fx:id="colSalary" prefWidth="157.60003662109375" text="Salary" />
+            <TableColumn fx:id="colPosition" prefWidth="160.0001220703125" text="Position" />
         </columns>
          <styleClass>
             <String fx:value="column-header-background" />
@@ -126,7 +126,7 @@
             <String fx:value="table-view" />
          </styleClass>
       </TableView>
-      <JFXButton buttonType="RAISED" layoutX="101.0" layoutY="751.0" onAction="#btnReportOnAction" prefHeight="33.0" prefWidth="97.0" styleClass="jfx-buttonBill" stylesheets="@../css/button.css" text="Report">
+      <JFXButton buttonType="RAISED" layoutX="101.0" layoutY="651.0" onAction="#btnReportOnAction" prefHeight="33.0" prefWidth="97.0" styleClass="jfx-buttonBill" stylesheets="@../css/button.css" text="Report">
          <graphic>
             <ImageView fitHeight="18.0" fitWidth="42.0" pickOnBounds="true" preserveRatio="true">
                <image>
